--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Caper
 
 owner:
-  github: casperllm
+  github:  https://github.com/casperllm/CASPER
   scholar: scholar.google.com
 
 links:
