--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ highlighter: rouge
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
 
-
+markdown: kramdown
 kramdown:
   auto_ids: true
   footnote_nr: 1
